--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="Add">Add</string>
     <string name="toDo">TODO</string>
     <string name="task_placeholder">This is one of the task you have to do on your own</string>
+    <string name="inputTask">Write your task here</string>
 </resources>
