--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="task_placeholder">This is one of the task you have to do on your own</string>
     <string name="inputTask">Write your task here</string>
 
+    <string name="add_date">Add date to your task</string>
     <string name="delete">Delete</string>
     <string name="edit">Edit</string>
+    <string name="notification">You have a Pending Task to do now</string>
 </resources>
