--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,17 @@
     <string name="add_button">Button to add the task</string>
     <string name="task_placeholder">This is one of the task you have to do on your own</string>
     <string name="inputTask">Write your task here</string>
+    <string name="info_title">App Info</string>
+    <string name="info_content">Hi. This is to guide you to use the app.\n
+        You can add/remove task according to your need.\n
+        \t1. To add a task, Tap on the bottom most button with "+" symbol.\n
+        \t2. Write the task you want to add\n
+        \t3. You can set the priority as well by selecting any of the option given below the input field\n
+        \t4. You can select time as well to set a reminder at a required time\n
+        Tap on the check box to mark the task as completed\n
+        To check the tasks you have completed already you can swipe left.\n
+        To mark the task as not completed you have to tap the check box in completed section\n
+    </string>
 
     <string name="add_date">Add date to your task</string>
     <string name="delete">Delete</string>
